--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400');
+
 .App {
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
+  color: #999;
 }
 
 .App-logo {
