--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,9 @@
 .header {
-  background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
+}
+
+.header h1 {
+  font-weight: 300;
 }
